[tool.poetry]
name = "djangophysics"
version = "1.0.20"
description = "Integrate currencies and measure conversions in a Django project"
authors = ["Frederic Meurou <fm@peabytes.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7, <4"
Django = ">=3.1"
django-cors-headers = ">=3.2"
django-cors-middleware = ">=1.5"
django-extensions = ">=3.0"
django-filter = ">=2.3"
django-sendfile = ">=0.3"
djangorestframework = ">=3.11"
drf-yasg = ">=1.17"
markdown = ">=3.0"
lxml = "~=4.0"
django_redis = ">=4.0"
pysendfile = "~=2.0"
# gunicorn
# "psycopg2
# "mysql
countryinfo = ">=0.1"
timezonefinder = ">=4.4"
forex-python = ">=1.0"
Babel = ">=2.8"
Pint = ">=0.17"
networkx = ">=2.5"
sympy = ">=1.7"
channels =  ">=3.0"
uncertainties = ">=3.1"
ariadne = ">=0.13"
requests = "^2.26.0"
pycountry = "^20.7.3"
iso4217 = "^1.6.20180829"
pytz = "^2021.3"
django-createsuperuser = "^2020.12.3"



[tool.poetry.dev-dependencies]
coverage = "^5.3.1"
pylint-venv = "^2.1.1"
gunicorn = "^20.1.0"
mysqlclient = "^2.0.3"
ipython = "^7.23.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
